tests/ui/borrowck/borrowck-borrow-overloaded-deref.stderr
error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-deref.rs:12:24
   |
LL |     let __isize = &mut *x;
   |                   -----^^
   |                   |
   |                   cannot borrow as mutable
   |
   = help: `*x` is of type `&isize`, which is an immutable reference
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Rc<isize>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-deref.rs:16:24
   |
LL |     let __isize = &mut *x;
   |                   -----^^
   |                   |
   |                   cannot borrow as mutable
   |
   = help: `*x` is of type `&isize`, which is an immutable reference
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Rc<isize>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-deref.rs:24:10
   |
LL |     &mut **x
   |     -----^^^
   |     |
   |     cannot borrow as mutable
   |
   = help: `**x` is of type `&isize`, which is an immutable reference
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Rc<isize>`

error[E0596]: cannot borrow data in an `Rc` as mutable
  --> $DIR/borrowck-borrow-overloaded-deref.rs:28:10
   |
LL |     &mut **x
   |     -----^^^
   |     |
   |     cannot borrow as mutable
   |
   = help: `**x` is of type `&isize`, which is an immutable reference
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Rc<isize>`

error[E0594]: cannot assign to data in an `Rc`
  --> $DIR/borrowck-borrow-overloaded-deref.rs:32:5
   |
LL |     *x = 3;
   |     ^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Rc<isize>`

error[E0594]: cannot assign to data in an `Rc`
  --> $DIR/borrowck-borrow-overloaded-deref.rs:36:5
   |
LL |     **x = 3;
   |     ^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Rc<isize>`

error[E0594]: cannot assign to data in an `Rc`
  --> $DIR/borrowck-borrow-overloaded-deref.rs:40:5
   |
LL |     **x = 3;
   |     ^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Rc<isize>`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0594, E0596.
For more information about an error, try `rustc --explain E0594`.
